[gd_scene load_steps=9 format=3 uid="uid://d3rxxvccy5nlr"]

[ext_resource type="Texture2D" uid="uid://d12iurn15b8i5" path="res://core/cars/thief_car_sprite.png" id="1_1obw4"]
[ext_resource type="Script" uid="uid://bodf878mrenpf" path="res://core/cars/car.gd" id="1_4vvat"]
[ext_resource type="Texture2D" uid="uid://d1sge6ua7f628" path="res://core/cars/thief_car_head_lights.png" id="2_4vvat"]
[ext_resource type="Material" uid="uid://bo4wsd7ntdpty" path="res://core/shaders/interaction_outline_material.tres" id="2_8w01j"]
[ext_resource type="Texture2D" uid="uid://b52iigx68pmyb" path="res://core/cars/thief_car_tail_lights.png" id="3_8w01j"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4vvat"]
polygon = PackedVector2Array(7, -81, 7, -73, -1, -73, -1, -49, -9, -49, -9, -17, -15, -17, -15, -57, -169, -57, -169, -31, -161, -31, -161, -25, -177, -25, -177, -17, -185, -17, -185, 41, -177, 41, -177, 49, -169, 49, -169, 57, -151, 57, -151, 49, -127, 49, -127, 41, -121, 41, -121, 57, -113, 57, -113, 65, -79, 65, -79, 57, -71, 57, -71, 49, -65, 49, -65, 57, -23, 57, -23, 49, -1, 49, -1, 57, 97, 57, 97, 49, 103, 49, 103, 57, 111, 57, 111, 65, 145, 65, 145, 57, 153, 57, 153, 49, 167, 49, 167, 57, 185, 57, 185, 49, 193, 49, 193, -17, 185, -17, 185, -25, 177, -25, 177, -31, 185, -31, 185, -49, 177, -49, 177, -57, 97, -57, 97, -73, 89, -73, 89, -81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_seo5q"]
size = Vector2(352, 48)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1hfqd"]
radius = 80.0
height = 304.0

[node name="Car" type="CharacterBody2D"]
disable_mode = 1
motion_mode = 1
script = ExtResource("1_4vvat")

[node name="CarSprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
material = ExtResource("2_8w01j")
use_parent_material = true
position = Vector2(0, -48)
texture = ExtResource("1_1obw4")
region_rect = Rect2(0, 0, 448, 160)

[node name="LightOccluder2D" type="LightOccluder2D" parent="CarSprite2D"]
visible = false
occluder = SubResource("OccluderPolygon2D_4vvat")

[node name="HeadLights" type="PointLight2D" parent="CarSprite2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(200, 0)
color = Color(0.985389, 0.939989, 0.696828, 1)
energy = 0.6
shadow_enabled = true
shadow_filter_smooth = 5.0
texture = ExtResource("2_4vvat")
offset = Vector2(-200, 0)

[node name="TailLights" type="PointLight2D" parent="CarSprite2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-192, -8)
color = Color(0.981995, 0.514889, 0.452249, 1)
energy = 0.3
shadow_enabled = true
shadow_filter_smooth = 5.0
texture = ExtResource("3_8w01j")
offset = Vector2(192, 0)

[node name="CarCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_seo5q")

[node name="InteractionArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea2D"]
visible = false
position = Vector2(40, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1hfqd")
debug_color = Color(0.7, 0.471371, 0, 0.42)

[connection signal="car_entered" from="." to="." method="_on_car_entered"]
[connection signal="body_entered" from="InteractionArea2D" to="." method="_on_interaction_area_2d_body_entered"]
[connection signal="body_exited" from="InteractionArea2D" to="." method="_on_interaction_area_2d_body_exited"]
